--- a/package.json
+++ b/package.json
@@ -10,7 +10,7 @@
   "author": "",
   "license": "ISC",
   "dependencies": {
-    "bcrypt": "^4.0.1",
+    "body-parser": "^1.19.0",
     "crypto-js": "^3.1.9-1",
     "express": "^4.17.1"
   }
