--- a/package.json
+++ b/package.json
@@ -1,7 +1,7 @@
 {
   "name": "blockchain",
   "version": "1.0.0",
-  "description": "",
+  "description": "Blockchain web application",
   "main": "index.js",
   "scripts": {
     "start": "node app.js"
